[package]
name = "randge"
version = "0.1.0"
authors = ["2a5f <u2a5f@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rand"]

[dependencies]
num-traits = "0.2"
rand = { version = "0.7", optional = true }

[dev-dependencies]
rand = "0.7"
