[package]
name = "randge"
version = "1.1.0"
description = "Generate unique random numbers"
authors = ["2A5F <u2a5f@outlook.com>"]
edition = "2018"
repository = "https://github.com/2A5F/randge"
license = "MIT"
keywords = ["random", "unique", "range", "no-repetition"]
categories = ["algorithms", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rand"]

[dependencies]
num-traits = "0.2"
rand = { version = "0.7", optional = true }

[dev-dependencies]
rand = "0.7"
criterion = "0.3.3"

[[bench]]
name = "randge"
harness = false
